[project]
name = "bookingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "psycopg2>=2.9.11",
    "pyppeteer>=0.0.25",
    "fastapi>=0.131.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.41.0",
]
